--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "start:watch": "nodemon",
+    "start": "nodemon app.js",
     "build": "node.js"
   },
   "repository": {
